# bamonka

./: .gitattributes  .gitignore  README.md
03/c/: .gitignore  mct_01_review.md
03/tds/: README.md
04/cg/lab_04/: CMakeLists.txt  benches.cpp  benches.h  errors.cpp  errors.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  methods.cpp  methods.h  task.cpp  task.h  time.py
04/cg/lab_09/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.cpp  task.h
05/aa/: LICENSE
05/cg-course/: .gitlab-ci.yml  README.md  cg-course.pro
05/libs/: go.mod  go.sum
05/research/: 01-definitions.tex  02-abbreviations.tex  03-introduction.tex  04-analysis.tex  05-class.tex  06-conclusion.tex  biblio.bib  research.tex
06/os-labs/lab_04/1/: CMakeLists.txt  makefile  script.py  time.c
06/os-labs/lab_04/1/data/: 10000.txt  128.txt  2000.txt  3000.txt  50.txt  500.txt  501.txt  broken.txt
06/os-labs/lab_04/1/inc/: benchmark.h  flats_db.h  mystring.h  table.h
06/os-labs/lab_04/1/src/: benchmark.c  flat.c  flats_db.c  table.c  ui.c
06/practice/: 03-introduction.tex  04-analysis.tex  05-design.tex  08-conclusion.tex  09-appendix.tex  biblio.bib  coursework.tex
07/govnx/: CMakeLists.txt  Dockerfile  docker-compose.yml  log.c  log.h  main.c  net.c  net.h
07/networks-course/: docker-compose.yml  http.c  main.c
07/research/: 00-essay.tex  01-definitions.tex  02-abbreviations.tex  03-introduction.tex  04-analysis.tex  05-db.tex  06-research.tex  (+6 more)
07/security/lab_01/: CMakeLists.txt  main.c
07/security/lab_01/configs/: panel.txt  reflector.txt  rotor_1.txt  rotor_2.txt  rotor_3.txt
07/security/lab_01/data/: 1.enigma  2.decoded.txt  2.enigma  2_new.enigma  5.enigma
07/security/lab_01/enigma/: enigma.c  enigma.h
07/security/lab_01/file_io/: file_io.c  file_io.h
07/security/lab_01/report/: 03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  08-conclusion.tex  coursework.tex
07/security/lab_01/report/inc/svg/: encode.graphml
07/security/lab_01/scripts/: gen.go
(+2310 files in other folders)
